[package]
name = "questionnaire"
version = "0.3.1"
authors = ["Philipp Hansch <dev@phansch.net>"]
edition = "2018"

# Don't want this on crates.io for now.
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "*"
